exports[`test Should show the chaos area 1`] = `
<svg
  height="100%"
  id="stage"
  width="100%">
  <rect
    className="not-in-focus"
    height="100%"
    id="chaos"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    width="100%" />
</svg>
------------HTML PREVIEW---------------
<svg
  height="100%"
  id="stage"
  width="100%"
>
  <rect
    class="not-in-focus"
    height="100%"
    id="chaos"
    width="100%"
  >
  </rect>
</svg>
`;

exports[`test Should show the chaos area 2`] = `
<svg
  height="100%"
  id="stage"
  width="100%">
  <rect
    className="not-in-focus"
    height="100%"
    id="chaos"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    width="100%" />
</svg>
------------HTML PREVIEW---------------
<svg
  height="100%"
  id="stage"
  width="100%"
>
  <rect
    class="not-in-focus"
    height="100%"
    id="chaos"
    width="100%"
  >
  </rect>
</svg>
`;

exports[`test Should show the chaos area 3`] = `
<svg
  height="100%"
  id="stage"
  width="100%">
  <rect
    className="not-in-focus"
    height="100%"
    id="chaos"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    width="100%" />
</svg>
------------HTML PREVIEW---------------
<svg
  height="100%"
  id="stage"
  width="100%"
>
  <rect
    class="not-in-focus"
    height="100%"
    id="chaos"
    width="100%"
  >
  </rect>
</svg>
`;

exports[`test Should show the comfort area 1`] = `
<svg
  height="100%"
  id="stage"
  width="100%">
  <g>
    <circle
      className="area js-area-standard"
      cx="50%"
      cy="50%"
      id="comfort"
      r="35%"
      style={undefined} />
    <text
      className="area-label"
      id="label-comfort"
      text-anchor="middle"
      x="50%"
      y="50%">
      comfort
    </text>
  </g>
</svg>
------------HTML PREVIEW---------------
<svg
  height="100%"
  id="stage"
  width="100%"
>
  <g>
    <circle
      class="area js-area-standard"
      cx="50%"
      cy="50%"
      id="comfort"
      r="35%"
    >
    </circle>
    <text
      class="area-label"
      id="label-comfort"
      text-anchor="middle"
      x="50%"
      y="50%"
    >
      comfort
    </text>
  </g>
</svg>
`;

exports[`test Should show the comfort model 1`] = `
<svg
  height="100%"
  id="stage"
  width="100%">
  <svg
    height="100%"
    id="stage"
    width="100%">
    <rect
      className="not-in-focus"
      height="100%"
      id="chaos"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      width="100%" />
    <g
      id="zones">
      <g>
        <circle
          className="area js-area-standard"
          cx="50%"
          cy="50%"
          id="stretch"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          r="33%"
          style={undefined} />
        <text
          className="area-label"
          id="label-stretch"
          text-anchor="middle"
          x="50%"
          y="25%">
          stretch
        </text>
      </g>
      <g>
        <circle
          className="area js-area-standard"
          cx="50%"
          cy="50%"
          id="comfort"
          r="35%"
          style={undefined} />
        <text
          className="area-label"
          id="label-comfort"
          text-anchor="middle"
          x="50%"
          y="50%">
          comfort
        </text>
      </g>
    </g>
    <g
      id="history" />
    <rect
      fill-opacity="0.0"
      height="100%"
      id="clickable"
      width="100%" />
  </svg>
</svg>
------------HTML PREVIEW---------------
<svg
  height="100%"
  id="stage"
  width="100%"
>
  <svg
    height="100%"
    id="stage"
    width="100%"
  >
    <rect
      class="not-in-focus"
      height="100%"
      id="chaos"
      width="100%"
    >
    </rect>
    <g id="zones">
      <g>
        <circle
          class="area js-area-standard"
          cx="50%"
          cy="50%"
          id="stretch"
          r="33%"
        >
        </circle>
        <text
          class="area-label"
          id="label-stretch"
          text-anchor="middle"
          x="50%"
          y="25%"
        >
          stretch
        </text>
      </g>
      <g>
        <circle
          class="area js-area-standard"
          cx="50%"
          cy="50%"
          id="comfort"
          r="35%"
        >
        </circle>
        <text
          class="area-label"
          id="label-comfort"
          text-anchor="middle"
          x="50%"
          y="50%"
        >
          comfort
        </text>
      </g>
    </g>
    <g id="history"></g>
    <rect
      fill-opacity="0.0"
      height="100%"
      id="clickable"
      width="100%"
    >
    </rect>
  </svg>
</svg>
`;

exports[`test Should show the stretch area 1`] = `
<svg
  height="100%"
  id="stage"
  width="100%">
  <g>
    <circle
      className="area js-area-standard"
      cx="50%"
      cy="50%"
      id="stretch"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      r="33%"
      style={undefined} />
    <text
      className="area-label"
      id="label-stretch"
      text-anchor="middle"
      x="50%"
      y="25%">
      stretch
    </text>
  </g>
</svg>
------------HTML PREVIEW---------------
<svg
  height="100%"
  id="stage"
  width="100%"
>
  <g>
    <circle
      class="area js-area-standard"
      cx="50%"
      cy="50%"
      id="stretch"
      r="33%"
    >
    </circle>
    <text
      class="area-label"
      id="label-stretch"
      text-anchor="middle"
      x="50%"
      y="25%"
    >
      stretch
    </text>
  </g>
</svg>
`;
